--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,34 @@
     
     <body>
         <h1>Margherita Pizza</h1>
+        <img src="../img/pizza.jpg" alt="A warm toasted Margherita pizza" height="490" width="625">
+        <h3>Description</h3>
+        <p>Margherita Pizza is a simple, but delicious pizza that is extremely easy to make and enjoy at home. It's perfect for first time pizza makers at home, or seasoned professionals!</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>Pizza dough</li>
+                <ul>
+                    <li>Store bought may be easy, but it is not too hard to make your own dough if you're feeling adventurous!</li>
+                </ul>
+            <li>Flour</li>
+            <li>Pizza Sauce</li>
+            <li>Fresh Mozzarella</li>
+            <li>Fresh Basil leaves</li>
+            <li>Cornmeal</li>
+            <li>Pizza Stone</li>
+        </ul>
+        <ol>Steps
+            <li>Start by preheating your oven to 400 <sup>o</sup></li>
+            <li>While the oven is heating up, sprinkle your work area with a healthy amount of flour</li>
+            <li>Take your dough and lay it onto your floury work space</li>
+            <li>Begin to kneed and stretch the dough out with your hands</li>
+            <li>Once you are happy with the shape of your dough, spread cornmeal onto the pan you will use to transfer the dough into the oven.</li>
+            <li>Lay your dough onto the pan and get your pizza sauce ready</li>
+            <li>With a spoon, place as much sauce onto your pizza as you wish</li>
+            <li>Finally, dollop your mozzarella cheese onto several places across the pizza</li>
+            <li>When the oven is ready, place your pizza in the oven</li>
+            <li>Watch pizza carefully and cook for 10 minutes, rotating as needed to cook evenly</li>
+            <li>When done, take your pizza out, garnish with fresh basil, cut and serve!</li>
+        </ol>
     </body>
 </html>
