Add image, description, ingredient list, and steps

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -28,7 +28,7 @@
             <li>While the oven is heating up, sprinkle your work area with a healthy amount of flour</li>
             <li>Take your dough and lay it onto your floury work space</li>
             <li>Begin to kneed and stretch the dough out with your hands</li>
-            <li>Once you are happy with the shape of your dough, spread cornmeal onto the pan you will use to transfer the dough into the oven.</li>
+            <li>Once you are happy with the shape of your dough, spread cornmeal onto the pan you will use to transfer the dough into the oven</li>
             <li>Lay your dough onto the pan and get your pizza sauce ready</li>
             <li>With a spoon, place as much sauce onto your pizza as you wish</li>
             <li>Finally, dollop your mozzarella cheese onto several places across the pizza</li>
