Link image of salad

--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,5 +7,7 @@
     
     <body>
         <h1>Caesar Salad</h1>
+
+        <img src="../img/salad.jpg" alt="A colorful juicy salad" height="445" width="495">
     </body>
 </html>
