--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -9,5 +9,20 @@
         <h1>Caesar Salad</h1>
 
         <img src="../img/salad.jpg" alt="A colorful juicy salad" height="445" width="495">
+
+        <h3>Description</h3>
+        <p>Caesar Salad is a very basic, but often overlooked salad. With a little work it can be made into a delicious addition to any meal.</p>
+        
+        <h4>Ingredients</h4>
+        <ul>
+            <li>Head of Lettuce</li>
+            <li>1 Avocado</li>
+            <li>1 Bell Pepper of any color</li>
+            <li>Croutons</li>
+            <li>String Cheese</li>
+            <li>1 Tomato</li>
+            <li>Baby Carrots</li>
+            <li>Dressing of Choice</li>
+        </ul>
     </body>
 </html>
