Create list for salad file

--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -24,5 +24,22 @@
             <li>Baby Carrots</li>
             <li>Dressing of Choice</li>
         </ul>
+
+        <h4>Steps</h4>
+        <ol>
+            <li>Wash lettuce and chop into bite sized pieces</li>
+            <li>Place chopped lettuce in large bowl to mix rest of ingredients in</li>
+            <li>Mix the following items into the bowl with the lettuce:</li>
+                <ul>
+                    <li>Sliced avocado</li>
+                    <li>Diced bell pepper</li>
+                    <li>Cubed string cheese</li>
+                    <li>Diced tomato</li>
+                    <li>Diced baby carrots</li>
+                    <li>Croutons</li>
+                </ul>
+            <li>Drizzle dressing into bowl and mix until everything is coated in the bowl</li>
+            <li>Serve and enjoy!</li>    
+        </ol>
     </body>
 </html>
