Link salad page to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <body>
         <h1>Odin Recipes</h1>
+
         <a href="./recipes/pizza.html">Margherita Pizza</a>
+        <a href="./recipes/salad.html">Caesar Salad</a>
     </body>
 </html>
