Fill out ingredient and step list

--- a/recipes/shake.html
+++ b/recipes/shake.html
@@ -9,5 +9,29 @@
         <h1>Mint Chip Shake</h1>
 
         <img src="../img/shake.jpg" alt="Cold and creamy mint chip shake" height="500" width="620">
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Blender</li>
+            <li>Tub of mint chip ice cream</li>
+            <li>Milk</li>
+            <li>Optional:</li>
+            <ul>
+                <li>Oreos</li>
+                <li>Whip Cream</li>
+                <li>Chocolate sauce</li>
+                <li>1 Cherry</li>
+            </ul>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>In a blender place 4 scoops of ice cream</li>
+            <li>Pour milk into blend until it appears the ice cream is half covered</li>
+            <li>Blend mixture until it is a consistency you prefer (more milk for a more liquid shake)</li>
+            <li>Pour shake into a cup</li>
+            <li>If desired, added crushed oreos, whip cream, chocolate sauce, and cherry</li>
+            <li>Enjoy!</li>
+        </ol>
     </body>
 </html>
