Link shake page to homepage

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
         <a href="./recipes/pizza.html">Margherita Pizza</a>
         <a href="./recipes/salad.html">Caesar Salad</a>
+        <a href="./recipes/shake.html">Mint Chip Shake</a>
     </body>
 </html>
