Create description and reformat heading level

--- a/recipes/shake.html
+++ b/recipes/shake.html
@@ -10,7 +10,10 @@
 
         <img src="../img/shake.jpg" alt="Cold and creamy mint chip shake" height="500" width="620">
 
-        <h3>Ingredients</h3>
+        <h3>Description</h3>
+        <p>A mint chip shake is the perfect dessert to finish out a long day. With endless possibilities, you can upgrade your plain mint chip ice cream to a fine delicacy!</p>
+
+        <h4>Ingredients</h4>
         <ul>
             <li>Blender</li>
             <li>Tub of mint chip ice cream</li>
@@ -24,7 +27,7 @@
             </ul>
         </ul>
 
-        <h3>Steps</h3>
+        <h4>Steps</h4>
         <ol>
             <li>In a blender place 4 scoops of ice cream</li>
             <li>Pour milk into blend until it appears the ice cream is half covered</li>
