--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -27,7 +27,8 @@
             <li>Pizza Stone</li>
         </ul>
         
-        <ol>Steps
+        <h4>Steps</h4>
+        <ol>
             <li>Start by preheating your oven to 400 <sup>o</sup></li>
             <li>While the oven is heating up, sprinkle your work area with a healthy amount of flour</li>
             <li>Take your dough and lay it onto your floury work space</li>
