--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My Odin Recipes</title>
+        <link rel="stylesheet" href="./css/index-style.css">
     </head>
     
     <body>
