--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Salad Recipe</title>
+        <link rel="stylesheet" href="../css/page-style.css">
     </head>
     
     <body>
