--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Margherita Pizza</h1>
        
-        <img src="../img/pizza.jpg" alt="A warm toasted Margherita pizza" height="490" width="625">
+        <img src="../img/pizza.jpg" alt="A warm toasted Margherita pizza">
        
         <h3>Description</h3>
         <p>Margherita Pizza is a simple, but delicious pizza that is extremely easy to make and enjoy at home. It's perfect for first time pizza makers at home, or seasoned professionals!</p>
