--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Caesar Salad</h1>
 
-        <img src="../img/salad.jpg" alt="A colorful juicy salad" height="435" width="510">
+        <img src="../img/salad.jpg" alt="A colorful juicy salad">
 
         <h3>Description</h3>
         <p>Caesar Salad is a very basic, but often overlooked salad. With a little work it can be made into a delicious addition to any meal.</p>
