--- a/recipes/shake.html
+++ b/recipes/shake.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Mint Chip Shake</h1>
 
-        <img src="../img/shake.jpg" alt="Cold and creamy mint chip shake" height="500" width="620">
+        <img src="../img/shake.jpg" alt="Cold and creamy mint chip shake">
 
         <h3>Description</h3>
         <p>A mint chip shake is the perfect dessert to finish out a long day. With endless possibilities, you can upgrade your plain mint chip ice cream to a fine delicacy!</p>
