Create return button to home page from recipe page

--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -9,6 +9,10 @@
     <body>
         <h1>Caesar Salad</h1>
 
+        <button onclick="window.location.href='../index.html'">
+            Return
+        </button>
+
         <img src="../img/salad.jpg" alt="A colorful juicy salad">
 
         <h3>Description</h3>
