--- a/recipes/shake.html
+++ b/recipes/shake.html
@@ -9,6 +9,10 @@
     <body>
         <h1>Mint Chip Shake</h1>
 
+        <button onclick="window.location.href='../index.html'">
+            Return
+        </button>
+
         <img src="../img/shake.jpg" alt="Cold and creamy mint chip shake">
 
         <h3>Description</h3>
