Format and style image

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <img src="./img/kirby.gif" alt="Animated character Kirby turing into a chef" height="500" width="550">
-
         <ul>
             <li><a href="./recipes/pizza.html">Margherita Pizza</a></li>
             <li><a href="./recipes/salad.html">Caesar Salad</a></li>
             <li><a href="./recipes/shake.html">Mint Chip Shake</a></li>
         </ul>
+
+        <img src="./img/kirby.gif" alt="Animated character Kirby turing into a chef">
+
     </body>
 </html>
