Restructure header class and text align

--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <h1>Caesar Salad</h1>
+        <h1 class="head">Caesar Salad</h1>
 
         <button onclick="window.location.href='../index.html'">
             Return
@@ -15,10 +15,10 @@
 
         <img src="../img/salad.jpg" alt="A colorful juicy salad">
 
-        <h3>Description</h3>
+        <h3 class="head">Description</h3>
         <p>Caesar Salad is a very basic, but often overlooked salad. With a little work it can be made into a delicious addition to any meal.</p>
         
-        <h4>Ingredients</h4>
+        <h4 class="head">Ingredients</h4>
         <ul>
             <li>Head of Lettuce</li>
             <li>1 Avocado</li>
@@ -30,7 +30,7 @@
             <li>Dressing of Choice</li>
         </ul>
 
-        <h4>Steps</h4>
+        <h4 class="head">Steps</h4>
         <ol>
             <li>Wash lettuce and chop into bite sized pieces</li>
             <li>Place chopped lettuce in large bowl to mix rest of ingredients in</li>
