--- a/recipes/shake.html
+++ b/recipes/shake.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <h1>Mint Chip Shake</h1>
+        <h1 class="head">Mint Chip Shake</h1>
 
         <button onclick="window.location.href='../index.html'">
             Return
@@ -15,10 +15,10 @@
 
         <img src="../img/shake.jpg" alt="Cold and creamy mint chip shake">
 
-        <h3>Description</h3>
+        <h3 class="head">Description</h3>
         <p>A mint chip shake is the perfect dessert to finish out a long day. With endless possibilities, you can upgrade your plain mint chip ice cream to a fine delicacy!</p>
 
-        <h4>Ingredients</h4>
+        <h4 class="head">Ingredients</h4>
         <ul>
             <li>Blender</li>
             <li>Tub of mint chip ice cream</li>
@@ -32,7 +32,7 @@
             </ul>
         </ul>
 
-        <h4>Steps</h4>
+        <h4 class="head">Steps</h4>
         <ol>
             <li>In a blender place 4 scoops of ice cream</li>
             <li>Pour milk into blend until it appears the ice cream is half covered</li>
