--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <ul>
             <li><a href="./recipes/pizza.html">Margherita Pizza</a></li>
-            <li><a href="./recipes/salad.html">Caesar Salad</a></li>
+            <li><a href="./recipes/salad.html">Not So Caesar Salad</a></li>
             <li><a href="./recipes/shake.html">Mint Chip Shake</a></li>
         </ul>
 
