--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <h1 class="head">Caesar Salad</h1>
+        <h1 class="head">Not So Caesar Salad</h1>
 
         <button onclick="window.location.href='../index.html'">
             Return
@@ -16,7 +16,7 @@
         <img src="../img/salad.jpg" alt="A colorful juicy salad">
 
         <h3 class="head">Description</h3>
-        <p>Caesar Salad is a very basic, but often overlooked salad. With a little work it can be made into a delicious addition to any meal.</p>
+        <p>Caesar Salad is a very basic, but can be easily improved. With a little work it can be made into a delicious addition to any meal.</p>
         
         <h4 class="head">Ingredients</h4>
         <ul>
