--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <body>
         <h1 class="head">Odin Recipes</h1>
 
-        <ul>
-            <li><a href="./recipes/pizza.html">Margherita Pizza</a></li>
-            <li><a href="./recipes/salad.html">Not So Caesar Salad</a></li>
-            <li><a href="./recipes/shake.html">Mint Chip Shake</a></li>
-        </ul>
+        <button onclick="window.location.href='./recipes/pizza.html'">
+            Margherita Pizza
+        </button>
 
+        <button onclick="window.location.href='./recipes/salad.html'">
+            Not So Caesar Salad
+        </button>
+        
+        <button onclick="window.location.href='./recipes/shake.html'">
+            Mint Chip Shake
+        </button>
+            
         <img src="./img/kirby.gif" alt="Animated character Kirby turing into a chef">
 
     </body>
