Create styled heading for ol list

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -32,7 +32,8 @@
             <li>Pizza Stone</li>
         </ul>
         
-        <ol class="head">Steps
+        <h4 class="head">Steps</h4>
+        <ol>
             <li>Start by preheating your oven to 400 <sup>o</sup></li>
             <li>While the oven is heating up, sprinkle your work area with a healthy amount of flour</li>
             <li>Take your dough and lay it onto your floury work space</li>
